HV-2127 Use ImmutableCollections (List.of/Set.of/Map.of) instead of Collections.unmodifiableXxx
Signed-off-by: marko-bekhta <marko.prykladna@gmail.com>